<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gallery Training</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_set_background">Set Background</string>
    <string name="action_detail">Detail Information</string>
    <string name="act_sorted_by_name">Sorted By Name</string>
    <string name="act_sorted_by_date">Sorted By Date</string>
    <string name="act_sorted_by_size">Sorted By Size</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_picture">Picture</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="close">CLOSE</string>
    <string name="submit">SUBMIT</string>

</resources>