<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.framgia.gallerytraining.AlbumActivity" >

    <item
        android:id="@+id/action_sortPicName"
        android:orderInCategory="100"
        android:title="@string/act_sorted_by_name"
        app:showAsAction="never"/>
    
    <item 
        android:id="@+id/action_sortPicDate"
        android:orderInCategory="100"
        android:title="@string/act_sorted_by_date"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_sortPicSize"
        android:orderInCategory="100"
        android:title="@string/act_sorted_by_size"
        app:showAsAction="never" />
    
    <item
		android:id="@+id/shareListPicture"
		android:icon="@drawable/ic_action_share"
		android:title="@string/action_share"
		app:showAsAction="ifRoom"/>
    
    <item
		android:id="@+id/detailAlbum"
		android:icon="@drawable/ic_action_read"
		android:title="@string/action_detail"
		app:showAsAction="ifRoom"/>

</menu>
