<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.framgia.gallerytraining.PictureActivity" >

    <item
		android:id="@+id/sharePicture"
		android:icon="@drawable/ic_action_share"
		android:title="@string/action_share"
		app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
		app:showAsAction="ifRoom"/>
    
    <item
		android:id="@+id/setBackground"
		android:icon="@drawable/ic_action_picture"
		android:title="@string/action_set_background"
		app:showAsAction="ifRoom"/>
    
    <item
		android:id="@+id/detailPicture"
		android:icon="@drawable/ic_action_read"
		android:title="@string/action_detail"
		app:showAsAction="ifRoom"/>

</menu>
