<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.framgia.gallerytraining.GalleryMainActivity" >

    <item
        android:id="@+id/action_sortAlbumName"
        android:orderInCategory="100"
        android:title="@string/act_sorted_by_name"
        app:showAsAction="never"/>
    
    <item 
        android:id="@+id/action_sortAlbumDate"
        android:orderInCategory="100"
        android:title="@string/act_sorted_by_date"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_sortAlbumSize"
        android:orderInCategory="100"
        android:title="@string/act_sorted_by_size"
        app:showAsAction="never" />
    
</menu>
